# AlphaRing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  README.md  THIRD_PARTY_NOTICES.md  handoff.md
.github/workflows/: build.yml
lib/game/src/halo3odst/: native_halo3odst.cpp
lib/spdlog/inc/details/: udp_client-windows.h
lib/spdlog/inc/sinks/: win_eventlog_sink.h
lib/utils/src/: FileVersion.cpp  String.cpp  String.h  ThreadLocalStorage.cpp
scripts/: install-linux.sh  install-windows.ps1
src/: WS2tcpip.h  WinBase.h  WinSock2.h  Windows.h  Xinput.h  common.h  main.cpp  mingw_compat.h
src/filesystem/: Filesystem.cpp  Filesystem.h
src/global/: Global.h
src/hook/: BuildManifest.cpp  BuildManifest.h  Hook.cpp  Hook.h
src/input/: Input.cpp  Input.h
src/log/: Log.cpp
src/mcc/: CGameManager.cpp  CGameManagerSplitscreen.cpp  CGamepadMapping.cpp  CGamepadMapping.h  CInputDevice.h  CUserProfile.cpp  mcc.cpp
src/mcc/module/: CModule.cpp  CModule.h  Module.cpp
src/mcc/module/entry/: entry.cpp  entry.h
src/mcc/module/entry/halo1/: render.cpp
src/mcc/module/patch/: CPatch.cpp  CPatch.h  CPatchSet.cpp  CPatchSet.h
src/mcc/network/: Network.cpp
src/mcc/settings/: ConfigValidation.cpp  ConfigValidation.h  Settings.cpp  Settings.h
src/mcc/splitscreen/: Splitscreen.cpp
src/render/: Render.cpp  Render.h
src/render/D3d11/: D3d11.h
src/render/Window/: Window.h
src/render/d3d11/: D3d11.cpp  D3d11.h  Graphics.cpp  Graphics.h  Hook.cpp  MonitorLayout.cpp  MonitorLayout.h
src/render/imgui/: ImGui.cpp  ImGui.h
src/render/imgui/curve_editor/: curve_editor.cpp
src/render/imgui/game/halo3/: context_object.cpp  context_player.cpp
src/render/imgui/game/mcc/: CMCCContext.cpp
src/render/window/: Window.cpp  Window.h
src/runtime/: Runtime.cpp  Runtime.h
src/wrapper/: WTSAPI32.def  WtsApi32.h  module_definition.cpp  module_definition.h  version.rc.in  wrapper.cpp
tests/: CMakeLists.txt  core_tests.cpp
